@@ -1,3 +1,5 @@
+.. _fundamentals-pojos:
+
 ===========================
 Document Data Format: POJOs
 ===========================
@@ -21,7 +23,7 @@ data representation.
 The example in this guide shows how to perform the following:
 
 - Configure the driver to serialize and deserialize POJOs
-- How to read and write to documents using POJOs 
+- How to read and write to documents using POJOs
 
 .. _fundamentals-example-pojo:
 
@@ -120,8 +122,8 @@ To set up the driver to store and retrieve POJOs, we need to specify:
   encode/decode the data between the POJO and MongoDB document, and which
   POJO classes or packages that the codecs should apply to.
 - A ``CodecRegistry`` instance that contains the codecs and other related information.
-- A ``MongoClient``, ``MongoDatabase``, or ``MongoCollection`` instance
-  configured to use the ``CodecRegistry``.
+- A ``MongoDatabase`` or ``MongoCollection`` instance configured to use the
+  ``CodecRegistry``.
 - A ``MongoCollection`` instance created with the POJO document class
   bound to the ``TDocument`` generic type.
 
@@ -130,7 +132,7 @@ requirements:
 
 1. Configure the ``PojoCodecProvider``. In this example, we use the ``automatic(true)``
    setting of the ``PojoCodecProvider.Builder`` to apply the Codecs to
-   any class and its properties. 
+   any class and its properties.
 
    .. code-block:: java
 
@@ -140,7 +142,7 @@ requirements:
 
       Codec providers also contain other objects such as ``ClassModel`` and
       ``Convention`` instances that further define serialization behavior.
-      For more information on codec providers and customization, see our guide
+      For more information on codec providers and customization, see the guide
       on :doc:`POJO Customization </fundamentals/data-formats/pojo-customization>`.
 
 #. Add the ``PojoCodecProvider`` instance to a ``CodecRegistry``. The
@@ -166,11 +168,10 @@ requirements:
 
       CodecRegistry pojoCodecRegistry = fromRegistries(getDefaultCodecRegistry(), fromProviders(pojoCodecProvider));
 
-#. Configure our ``MongoClient``, ``MongoDatabase``, or ``MongoCollection``
-   instance to use the Codecs in the ``CodecRegistry``. You only need to
-   configure one of these. In this example, we set the ``CodecRegistry`` on a
-   ``MongoDatabase`` called ``sample_pojos`` using the ``withCodecRegistry()``
-   method.
+#. Configure the ``MongoDatabase`` or ``MongoCollection`` instance to use the
+   Codecs in the ``CodecRegistry``. You only need to configure one of these.
+   In this example, we set the ``CodecRegistry`` on a ``MongoDatabase`` called
+   ``sample_pojos`` using the ``withCodecRegistry()`` method.
 
    .. code-block:: java
 
@@ -220,10 +221,10 @@ When you run this code, your output should look something like this:
 
    By default, the ``PojoCodecProvider`` omits fields in your POJO that are
    set to ``null``. For more information on how to specify this behavior, see
-   our guide on :doc:`POJO Customization </fundamentals/data-formats/pojo-customization>`.
+   the guide on :doc:`POJO Customization </fundamentals/data-formats/pojo-customization>`.
 
 For more information about the methods and classes mentioned in this section,
-see the following API Documentation:
+see the following API documentation:
 
 - `CodecRegistry <{+api+}/apidocs/bson/org/bson/codecs/configuration/CodecRegistry.html>`__
 - `TDocument <{+api+}/apidocs/mongodb-driver-sync/com/mongodb/client/MongoCollection.html>`__
@@ -245,5 +246,4 @@ by performing the following:
 - Specify the **automatic** conversion behavior for the ``PojoCodecProvider``
   to apply the ``Codecs`` to any class and its properties.
 - Add the ``PojoCodecProvider`` to a ``CodecRegistry``, and specify the
-  registry on an instance of a ``MongoClient``, ``MongoDatabase``, or
-  ``MongoCollection``.
+  registry on an instance of a ``MongoDatabase`` or ``MongoCollection``.
