@@ -1,3 +1,5 @@
+.. _fundamentals-pojo-customization:
+
 ==================
 POJO Customization
 ==================
