@@ -1,0 +1,8 @@
+package fundamentals.codecs.records;
+
+// start dataStorageRecord
+public record DataStorageRecord(
+        String productName,
+        double capacity
+) {}
+// end dataStorageRecord
